# klp-ccp

./: .gitignore  Makefile.am  README.md  arch_gcc48_x86_64.cc  arch_gcc48_x86_64.hh  arch_x86_64_gcc.cc  arch_x86_64_gcc.hh  architecture.cc  architecture.hh  ast.cc  ast.hh  ast_evaluate.cc  ast_evaluate.hh  ast_impl.hh  ast_processor.hh  ast_processor_impl.hh  ast_resolve.cc  builtins.cc  builtins.hh  builtins_impl.cc  builtins_impl.hh  callables_wrapper.hh  cmdline_except.cc  cmdline_except.hh  code_remark.cc  code_remark.hh  code_remark_pp.cc  code_remark_pp.hh  code_remark_raw.cc  code_remark_raw.hh  code_remarks.cc  code_remarks.hh  configure.ac  constexpr_value.cc  constexpr_value.hh  cow_set.hh  cparse.cc  cpp.cc  cpp_tokenize.cc  create_lp.cc  (+108 more)
arch/: Makefile.am  stddef-x86_64.h
examples/: Makefile.am
examples/policies/: Makefile.am
examples/policies/suse/: Makefile.am  __init__.py  ipa_clones.py  klp_policy.py  mod_symvers.py  target_mod_elf.py
lp-creation-python-policy/: Makefile.am  ccp.py
rpm/: klp-ccp.spec
testsuite/: Makefile.am
testsuite/ccp/: Makefile.am  aarch64-types-1.c  aarch64-types-1.c.expected  aarch64-va-list-1.c  aarch64-va-list-1.c.expected  builtin-choose-expr-1.c  builtin-choose-expr-1.c.expected  builtin-choose-expr-2.c  builtin-choose-expr-2.c.expected  ccp-aarch64-specific.exp  ccp-aarch64.exp  ccp.exp  condincl-1.c  condincl-1.c.expected  condincl-2.c  condincl-2.c.expected  condincl-3.c  condincl-3.c.expected  condincl-4.c  condincl-4.c.expected  ext-obj-1.c  ext-obj-1.c.expected  ext-obj-10.c  ext-obj-10.c.expected  ext-obj-11.c  ext-obj-11.c.expected  ext-obj-2.c  ext-obj-2.c.expected  ext-obj-3.c  ext-obj-3.c.expected  ext-obj-4.c  ext-obj-4.c.expected  ext-obj-5.c  ext-obj-5.c.expected  ext-obj-6.c  ext-obj-6.c.expected  ext-obj-7.c  ext-obj-7.c.expected  ext-obj-8.c  ext-obj-8.c.expected  (+208 more)
testsuite/cparse/: Makefile.am  cparse-aarch64.exp  cparse-x86_64.exp  cparse.exp  pr67730.h
testsuite/cparse/aarch64/: builtin-macros-1.c  char-unsigned-1.c  types-1.c  va-list-1.c  va-list-2.c
testsuite/cparse/gcc.c-torture/: Makefile.am
testsuite/cparse/gcc.c-torture/compile/: 20000105-1.c  20000403-1.c  20000412-2.c  20000427-1.c  20000511-1.c  20000701-1.c  20000802-1.c  20000804-1.c  20001222-1.c  20010320-1.c  20010525-1.c  20010605-2.c  20020314-1.c  20020418-1.c  20020701-1.c  20020927-1.c  20021015-2.c  20030109-1.c  20030110-1.c  20030224-1.c  20030415-1.c  20030416-1.c  20030503-1.c  20030530-1.c  20030612-1.c  20030707-1.c  20031031-2.c  20031113-1.c  20031220-2.c  20040101-1.c  20040124-1.c  20040304-1.c  20040309-1.c  20040310-1.c  20040317-3.c  20040705-1.c  20040817-1.c  20040908-1.c  20050105-1.c  20050510-1.c  (+272 more)
testsuite/cparse/gcc.c-torture/execute/: 20000113-1.c  20000205-1.c  20000217-1.c  20000223-1.c  20000224-1.c  20000225-1.c  20000227-1.c  20000313-1.c  20000314-1.c  20000314-2.c  20000314-3.c  20000403-1.c  20000412-1.c  20000412-2.c  20000412-3.c  20000412-4.c  20000412-5.c  20000412-6.c  20000419-1.c  20000422-1.c  20000503-1.c  20000511-1.c  20000519-2.c  20000523-1.c  20000528-1.c  20000603-1.c  20000605-1.c  20000605-2.c  20000605-3.c  20000622-1.c  20000717-1.c  20000717-2.c  20000717-3.c  20000717-5.c  20000722-1.c  20000726-1.c  20000731-1.c  20000731-2.c  20000801-3.c  20000801-4.c  (+459 more)
testsuite/cparse/gcc.dg/: 20000111-1.c  20020206-1.c  20030906-1.c  20030906-2.c  20031218-3.c  20050309-1.c  980816-1.c  Makefile.am  Walloca-1.c  Walloca-14.c  Wc90-c99-compat-1.c  Wc90-c99-compat-2.c  Wc90-c99-compat-4.c  Wc90-c99-compat-5.c  Wc90-c99-compat-6.c  Wconversion-complex-c99.c  Wcxx-compat-14.c  Wimplicit-function-declaration-c89-default.c  Wimplicit-function-declaration-c89-pedantic.c  Wimplicit-function-declaration-c89.c  Wimplicit-function-declaration-c99.c  Wincompatible-pointer-types.c  Wint-conversion.c  Wmissing-braces-fixits.c  Wno-pointer-sign.c  Wpointer-sign-Wall-no.c  Wpointer-sign-Wall.c  Wpointer-sign-pedantic-no.c  Wpointer-sign-pedantic.c  Wpointer-sign.c  Wunsuffixed-float-constants-1.c  align-2.c  array-13.c  array-4.c  array-quals-1.c  bitfld-19.c  bitfld-20.c  builtin-arith-overflow-2.c  builtins-54.c  c11-generic-1.c  (+104 more)
testsuite/cparse/x86_64/: pr29695-1.c  pr29695-2.c  pr61673.c
testsuite/cpp/: Makefile.am  compare-w-gnu-cpp.exp  test1.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test2.c  test20.c  test21.c  test22.c  test23.c  test24.c  test25.c  test26.c  test27.c  test28.c  test29.c  test3.c  test30.c  test31.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
testsuite/cpp/gcc.dg/: Makefile.am  paste10.c
testsuite/lib/: Makefile.am  ccp.exp  common.exp  cparse.exp  cpp.exp
testsuite/lib/ccp-toy-policy/: Makefile.am  toy_pol.py  toy_pol_can_externalize_fun.sh  toy_pol_is_patched.sh  toy_pol_may_include_header.sh  toy_pol_modify_externalized_sym.sh  toy_pol_modify_patched_fun_sym.sh  toy_pol_rename_rewritten_fun.sh  toy_pol_shall_externalize_fun.sh  toy_pol_shall_externalize_obj.sh
testsuite/unit/: Makefile.am  test_target_float.exp  test_target_int.exp
