EXTRA_DIST = ccp.exp						\
	testsuite/ccp/builtin-choose-expr-1.c			\
	testsuite/ccp/builtin-choose-expr-1.c.expected		\
	testsuite/ccp/builtin-choose-expr-2.c			\
	testsuite/ccp/builtin-choose-expr-2.c.expected		\
	testsuite/ccp/empty.c					\
	testsuite/ccp/empty.c.expected				\
	testsuite/ccp/ext-obj-1.c				\
	testsuite/ccp/ext-obj-1.c.expected			\
	testsuite/ccp/ext-obj-2.c				\
	testsuite/ccp/ext-obj-2.c.expected			\
	testsuite/ccp/ext-obj-3.c				\
	testsuite/ccp/ext-obj-3.c.expected			\
	testsuite/ccp/ext-obj-4.c				\
	testsuite/ccp/ext-obj-4.c.expected			\
	testsuite/ccp/ext-obj-5.c				\
	testsuite/ccp/ext-obj-5.c.expected			\
	testsuite/ccp/ext-obj-6.c				\
	testsuite/ccp/ext-obj-6.c.expected			\
	testsuite/ccp/ext-obj-7.c				\
	testsuite/ccp/ext-obj-7.c.expected			\
	testsuite/ccp/ext-obj-8.c				\
	testsuite/ccp/ext-obj-8.c.expected			\
	testsuite/ccp/ext-obj-9.c				\
	testsuite/ccp/ext-obj-9.c.expected			\
	testsuite/ccp/fun-closure-1.c				\
	testsuite/ccp/fun-closure-1.c.expected			\
	testsuite/ccp/fun-closure-2.c				\
	testsuite/ccp/fun-closure-2.c.expected			\
	testsuite/ccp/fun-closure-3.c				\
	testsuite/ccp/fun-closure-3.c.expected			\
	testsuite/ccp/fun-closure-4.c				\
	testsuite/ccp/fun-closure-4.h				\
	testsuite/ccp/fun-closure-4.c.expected			\
	testsuite/ccp/fun-closure-5.c				\
	testsuite/ccp/fun-closure-5.h				\
	testsuite/ccp/fun-closure-5.c.expected			\
	testsuite/ccp/fun-closure-6.c				\
	testsuite/ccp/fun-closure-6.h				\
	testsuite/ccp/fun-closure-6.c.expected			\
	testsuite/ccp/fun-closure-7.c				\
	testsuite/ccp/fun-closure-7.h				\
	testsuite/ccp/fun-closure-7.c.expected			\
	testsuite/ccp/fun-closure-8.c				\
	testsuite/ccp/fun-closure-8.h				\
	testsuite/ccp/fun-closure-8.c.expected			\
	testsuite/ccp/fun-closure-9.c				\
	testsuite/ccp/fun-closure-9.h				\
	testsuite/ccp/fun-closure-9.c.expected			\
	testsuite/ccp/headers-1.c				\
	testsuite/ccp/headers-1-internal.h			\
	testsuite/ccp/headers-1.c.expected			\
	testsuite/ccp/headers-2.c				\
	testsuite/ccp/headers-2.h				\
	testsuite/ccp/headers-2-internal.h			\
	testsuite/ccp/headers-2.c.expected			\
	testsuite/ccp/headers-3.c				\
	testsuite/ccp/headers-3.h				\
	testsuite/ccp/headers-3.c.expected			\
	testsuite/ccp/headers-4.c				\
	testsuite/ccp/headers-4.h				\
	testsuite/ccp/headers-4.c.expected			\
	testsuite/ccp/headers-5.c				\
	testsuite/ccp/headers-5.h				\
	testsuite/ccp/headers-5.c.expected			\
	testsuite/ccp/headers-6-internal.h			\
	testsuite/ccp/headers-6-1.h				\
	testsuite/ccp/headers-6-2.h				\
	testsuite/ccp/headers-6.c				\
	testsuite/ccp/headers-6.c.expected			\
	testsuite/ccp/headers-7.c				\
	testsuite/ccp/headers-7.h				\
	testsuite/ccp/headers-7.c.expected			\
	testsuite/ccp/macros-1.c				\
	testsuite/ccp/macros-1.c.expected			\
	testsuite/ccp/macros-2.c				\
	testsuite/ccp/macros-2.c.expected			\
	testsuite/ccp/macros-3.c				\
	testsuite/ccp/macros-3.c.expected			\
	testsuite/ccp/macros-4.c				\
	testsuite/ccp/macros-4.c.expected			\
	testsuite/ccp/macros-5.c				\
	testsuite/ccp/macros-5.c.expected			\
	testsuite/ccp/macros-6.c				\
	testsuite/ccp/macros-6.c.expected			\
	testsuite/ccp/macros-7.c				\
	testsuite/ccp/macros-7.c.expected			\
	testsuite/ccp/macros-8.c				\
	testsuite/ccp/macros-8.c.expected			\
	testsuite/ccp/macros-9.c				\
	testsuite/ccp/macros-9.c.expected			\
	testsuite/ccp/macros-10.c				\
	testsuite/ccp/macros-10.h				\
	testsuite/ccp/macros-10.c.expected			\
	testsuite/ccp/macros-11.c				\
	testsuite/ccp/macros-11.h				\
	testsuite/ccp/macros-11.c.expected			\
	testsuite/ccp/macros-12.c				\
	testsuite/ccp/macros-12.c.expected			\
	testsuite/ccp/macros-13.c				\
	testsuite/ccp/macros-13.c.expected			\
	testsuite/ccp/macros-14.c				\
	testsuite/ccp/macros-14.c.expected			\
	testsuite/ccp/macros-15.c				\
	testsuite/ccp/macros-15.h				\
	testsuite/ccp/macros-15.c.expected			\
	testsuite/ccp/macros-16.c				\
	testsuite/ccp/macros-16.h				\
	testsuite/ccp/macros-16.c.expected			\
	testsuite/ccp/macros-17.c				\
	testsuite/ccp/macros-17.h				\
	testsuite/ccp/macros-17.c.expected			\
	testsuite/ccp/macros-18.c				\
	testsuite/ccp/macros-18.h				\
	testsuite/ccp/macros-18.c.expected			\
	testsuite/ccp/macros-19.c				\
	testsuite/ccp/macros-19.h				\
	testsuite/ccp/macros-19.c.expected			\
	testsuite/ccp/macros-20.c				\
	testsuite/ccp/macros-20.h				\
	testsuite/ccp/macros-20.c.expected			\
	testsuite/ccp/macros-21.c				\
	testsuite/ccp/macros-21.h				\
	testsuite/ccp/macros-21.c.expected			\
	testsuite/ccp/macros-22.c				\
	testsuite/ccp/macros-22.c.expected			\
	testsuite/ccp/macros-23.c				\
	testsuite/ccp/macros-23.h				\
	testsuite/ccp/macros-23.c.expected			\
	testsuite/ccp/simple.c					\
	testsuite/ccp/simple.c.expected			\
	testsuite/ccp/tag-decls-1.c				\
	testsuite/ccp/tag-decls-1.c.expected			\
	testsuite/ccp/tag-decls-2.c				\
	testsuite/ccp/tag-decls-2.c.expected			\
	testsuite/ccp/tag-decls-3.c				\
	testsuite/ccp/tag-decls-3.c.expected			\
	testsuite/ccp/tag-decls-4.c				\
	testsuite/ccp/tag-decls-4.c.expected			\
	testsuite/ccp/tag-decls-5.c				\
	testsuite/ccp/tag-decls-5.c.expected			\
	testsuite/ccp/tag-decls-6.c				\
	testsuite/ccp/tag-decls-6.c.expected			\
	testsuite/ccp/tag-decls-7.c				\
	testsuite/ccp/tag-decls-7.c.expected			\
	testsuite/ccp/tag-decls-8.c				\
	testsuite/ccp/tag-decls-8.c.expected			\
	testsuite/ccp/tag-decls-9.c				\
	testsuite/ccp/tag-decls-9.c.expected			\
	testsuite/ccp/tag-decls-10.c				\
	testsuite/ccp/tag-decls-10.c.expected			\
	testsuite/ccp/tag-decls-11.c				\
	testsuite/ccp/tag-decls-11.c.expected			\
	testsuite/ccp/tag-decls-12.c				\
	testsuite/ccp/tag-decls-12.c.expected			\
	testsuite/ccp/tag-defs-1.c				\
	testsuite/ccp/tag-defs-1.c.expected			\
	testsuite/ccp/tag-defs-2.c				\
	testsuite/ccp/tag-defs-2.c.expected			\
	testsuite/ccp/tag-defs-3.c				\
	testsuite/ccp/tag-defs-3.c.expected			\
	testsuite/ccp/tag-defs-4.c				\
	testsuite/ccp/tag-defs-4.c.expected			\
	testsuite/ccp/tag-defs-5.c				\
	testsuite/ccp/tag-defs-5.c.expected			\
	testsuite/ccp/tag-defs-6.c				\
	testsuite/ccp/tag-defs-6.c.expected			\
	testsuite/ccp/tag-defs-7.c				\
	testsuite/ccp/tag-defs-7.c.expected			\
	testsuite/ccp/tag-defs-8.c				\
	testsuite/ccp/tag-defs-8.c.expected			\
	testsuite/ccp/tag-defs-9.c				\
	testsuite/ccp/tag-defs-9.c.expected			\
	testsuite/ccp/tag-defs-10.c				\
	testsuite/ccp/tag-defs-10.c.expected
