EXTRA_DIST = ccp.exp				\
	builtin-choose-expr-1.c		\
	builtin-choose-expr-1.c.expected	\
	builtin-choose-expr-2.c		\
	builtin-choose-expr-2.c.expected	\
	empty.c				\
	empty.c.expected			\
	ext-obj-1.c				\
	ext-obj-1.c.expected			\
	ext-obj-2.c				\
	ext-obj-2.c.expected			\
	ext-obj-3.c				\
	ext-obj-3.c.expected			\
	ext-obj-4.c				\
	ext-obj-4.c.expected			\
	ext-obj-5.c				\
	ext-obj-5.c.expected			\
	ext-obj-6.c				\
	ext-obj-6.c.expected			\
	ext-obj-7.c				\
	ext-obj-7.c.expected			\
	ext-obj-8.c				\
	ext-obj-8.c.expected			\
	ext-obj-9.c				\
	ext-obj-9.c.expected			\
	fun-closure-1.c			\
	fun-closure-1.c.expected		\
	fun-closure-2.c			\
	fun-closure-2.c.expected		\
	fun-closure-3.c			\
	fun-closure-3.c.expected		\
	fun-closure-4.c			\
	fun-closure-4.h			\
	fun-closure-4.c.expected		\
	fun-closure-5.c			\
	fun-closure-5.h			\
	fun-closure-5.c.expected		\
	fun-closure-6.c			\
	fun-closure-6.h			\
	fun-closure-6.c.expected		\
	fun-closure-7.c			\
	fun-closure-7.h			\
	fun-closure-7.c.expected		\
	fun-closure-8.c			\
	fun-closure-8.h			\
	fun-closure-8.c.expected		\
	fun-closure-9.c			\
	fun-closure-9.h			\
	fun-closure-9.c.expected		\
	fun-closure-10.c			\
	fun-closure-10.c.expected		\
	headers-1.c				\
	headers-1-internal.h			\
	headers-1.c.expected			\
	headers-2.c				\
	headers-2.h				\
	headers-2-internal.h			\
	headers-2.c.expected			\
	headers-3.c				\
	headers-3.h				\
	headers-3.c.expected			\
	headers-4.c				\
	headers-4.h				\
	headers-4.c.expected			\
	headers-5.c				\
	headers-5.h				\
	headers-5.c.expected			\
	headers-6-internal.h			\
	headers-6-1.h				\
	headers-6-2.h				\
	headers-6.c				\
	headers-6.c.expected			\
	headers-7.c				\
	headers-7.h				\
	headers-7.c.expected			\
	macros-1.c				\
	macros-1.c.expected			\
	macros-2.c				\
	macros-2.c.expected			\
	macros-3.c				\
	macros-3.c.expected			\
	macros-4.c				\
	macros-4.c.expected			\
	macros-5.c				\
	macros-5.c.expected			\
	macros-6.c				\
	macros-6.c.expected			\
	macros-7.c				\
	macros-7.c.expected			\
	macros-8.c				\
	macros-8.c.expected			\
	macros-9.c				\
	macros-9.c.expected			\
	macros-10.c				\
	macros-10.h				\
	macros-10.c.expected			\
	macros-11.c				\
	macros-11.h				\
	macros-11.c.expected			\
	macros-12.c				\
	macros-12.c.expected			\
	macros-13.c				\
	macros-13.c.expected			\
	macros-14.c				\
	macros-14.c.expected			\
	macros-15.c				\
	macros-15.h				\
	macros-15.c.expected			\
	macros-16.c				\
	macros-16.h				\
	macros-16.c.expected			\
	macros-17.c				\
	macros-17.h				\
	macros-17.c.expected			\
	macros-18.c				\
	macros-18.h				\
	macros-18.c.expected			\
	macros-19.c				\
	macros-19.h				\
	macros-19.c.expected			\
	macros-20.c				\
	macros-20.h				\
	macros-20.c.expected			\
	macros-21.c				\
	macros-21.h				\
	macros-21.c.expected			\
	macros-22.c				\
	macros-22.c.expected			\
	macros-23.c				\
	macros-23.h				\
	macros-23.c.expected			\
	simple.c				\
	simple.c.expected			\
	tag-decls-1.c				\
	tag-decls-1.c.expected			\
	tag-decls-2.c				\
	tag-decls-2.c.expected			\
	tag-decls-3.c				\
	tag-decls-3.c.expected			\
	tag-decls-4.c				\
	tag-decls-4.c.expected			\
	tag-decls-5.c				\
	tag-decls-5.c.expected			\
	tag-decls-6.c				\
	tag-decls-6.c.expected			\
	tag-decls-7.c				\
	tag-decls-7.c.expected			\
	tag-decls-8.c				\
	tag-decls-8.c.expected			\
	tag-decls-9.c				\
	tag-decls-9.c.expected			\
	tag-decls-10.c				\
	tag-decls-10.c.expected		\
	tag-decls-11.c				\
	tag-decls-11.c.expected		\
	tag-decls-12.c				\
	tag-decls-12.c.expected		\
	tag-defs-1.c				\
	tag-defs-1.c.expected			\
	tag-defs-2.c				\
	tag-defs-2.c.expected			\
	tag-defs-3.c				\
	tag-defs-3.c.expected			\
	tag-defs-4.c				\
	tag-defs-4.c.expected			\
	tag-defs-5.c				\
	tag-defs-5.c.expected			\
	tag-defs-6.c				\
	tag-defs-6.c.expected			\
	tag-defs-7.c				\
	tag-defs-7.c.expected			\
	tag-defs-8.c				\
	tag-defs-8.c.expected			\
	tag-defs-9.c				\
	tag-defs-9.c.expected			\
	tag-defs-10.c				\
	tag-defs-10.c.expected
